added doc about traps and text reports

--- a/open-source-reports/LULESH/fpc-report/cancellation/source_1.html
+++ b/open-source-reports/LULESH/fpc-report/cancellation/source_1.html
@@ -14,14 +14,14 @@
 <div class="separation_class"></div>
 <div class="report_title">
 <b>Report Title:</b>
-mpirun -np 8 --oversubscribe ./lulesh2.0 -p -i 10
+mpirun -np 8 --oversubscribe ./lulesh2.0 -i 10 -p
 </div>
 	
 <div class="separation_class"></div>
 <div class="hierarchy_class"><a href="../index.html">Main Report</a> &nbsp; &gt; &nbsp; 
 <a href="./cancellation.html">Cancellation
 	</a> &nbsp; &gt; &nbsp;
-/home/ignacio/projects/fpchecker/apps/cpu_testing/LULESH/lulesh.cc
+/usr/workspace/wsa/laguna/fpchecker/cpu_checking/apps/LULESH/lulesh.cc
 </div>
 <h2 id="heading">
 Cancellation
@@ -46,6 +46,11 @@ lulesh.cc
 <tr><td class="code_line_class">328</td><td><span class="highlightme"><code>  fjzet = Real_t(.125) * ( (z6-z0) - (z5-z3) + (z7-z1) - (z4-z2) );</code></span></td></tr>
 <tr><td class="code_line_class">329</td><td><code>  fjzze = Real_t(.125) * ( (z6-z0) + (z5-z3) + (z7-z1) + (z4-z2) );</code></td></tr>
 <tr><td class="code_line_class">330</td><td><code> ... </code></td></tr>
+<tr><td class="code_line_class">365</td><td><code> ... </code></td></tr>
+<tr><td class="code_line_class">366</td><td><code>  b[2][0] =   -  cjzxi  -  cjzet  -  cjzze;</code></td></tr>
+<tr><td class="code_line_class">367</td><td><span class="highlightme"><code>  b[2][1] =      cjzxi  -  cjzet  -  cjzze;</code></span></td></tr>
+<tr><td class="code_line_class">368</td><td><code>  b[2][2] =      cjzxi  +  cjzet  -  cjzze;</code></td></tr>
+<tr><td class="code_line_class">369</td><td><code> ... </code></td></tr>
 <tr><td class="code_line_class">389</td><td><code> ... </code></td></tr>
 <tr><td class="code_line_class">390</td><td><code>{</code></td></tr>
 <tr><td class="code_line_class">391</td><td><span class="highlightme"><code>   Real_t bisectX0 = Real_t(0.5) * (x3 + x2 - x1 - x0);</code></span></td></tr>
@@ -84,76 +89,6 @@ lulesh.cc
 <tr><td class="code_line_class">704</td><td><span class="highlightme"><code>                 hourgam[i][2] * hxx[2] + hourgam[i][3] * hxx[3]);</code></span></td></tr>
 <tr><td class="code_line_class">705</td><td><code>   }</code></td></tr>
 <tr><td class="code_line_class">706</td><td><code> ... </code></td></tr>
-<tr><td class="code_line_class">797</td><td><code> ... </code></td></tr>
-<tr><td class="code_line_class">798</td><td><code>         Real_t hourmodx =</code></td></tr>
-<tr><td class="code_line_class">799</td><td><span class="highlightme"><code>            x8n[i3] * gamma[i1][0] + x8n[i3+1] * gamma[i1][1] +</code></span></td></tr>
-<tr><td class="code_line_class">800</td><td><span class="highlightme"><code>            x8n[i3+2] * gamma[i1][2] + x8n[i3+3] * gamma[i1][3] +</code></span></td></tr>
-<tr><td class="code_line_class">801</td><td><span class="highlightme"><code>            x8n[i3+4] * gamma[i1][4] + x8n[i3+5] * gamma[i1][5] +</code></span></td></tr>
-<tr><td class="code_line_class">802</td><td><span class="highlightme"><code>            x8n[i3+6] * gamma[i1][6] + x8n[i3+7] * gamma[i1][7];</code></span></td></tr>
-<tr><td class="code_line_class">803</td><td><code></code></td></tr>
-<tr><td class="code_line_class">804</td><td><code>         Real_t hourmody =</code></td></tr>
-<tr><td class="code_line_class">805</td><td><span class="highlightme"><code>            y8n[i3] * gamma[i1][0] + y8n[i3+1] * gamma[i1][1] +</code></span></td></tr>
-<tr><td class="code_line_class">806</td><td><span class="highlightme"><code>            y8n[i3+2] * gamma[i1][2] + y8n[i3+3] * gamma[i1][3] +</code></span></td></tr>
-<tr><td class="code_line_class">807</td><td><span class="highlightme"><code>            y8n[i3+4] * gamma[i1][4] + y8n[i3+5] * gamma[i1][5] +</code></span></td></tr>
-<tr><td class="code_line_class">808</td><td><span class="highlightme"><code>            y8n[i3+6] * gamma[i1][6] + y8n[i3+7] * gamma[i1][7];</code></span></td></tr>
-<tr><td class="code_line_class">809</td><td><code></code></td></tr>
-<tr><td class="code_line_class">810</td><td><code>         Real_t hourmodz =</code></td></tr>
-<tr><td class="code_line_class">811</td><td><span class="highlightme"><code>            z8n[i3] * gamma[i1][0] + z8n[i3+1] * gamma[i1][1] +</code></span></td></tr>
-<tr><td class="code_line_class">812</td><td><span class="highlightme"><code>            z8n[i3+2] * gamma[i1][2] + z8n[i3+3] * gamma[i1][3] +</code></span></td></tr>
-<tr><td class="code_line_class">813</td><td><span class="highlightme"><code>            z8n[i3+4] * gamma[i1][4] + z8n[i3+5] * gamma[i1][5] +</code></span></td></tr>
-<tr><td class="code_line_class">814</td><td><span class="highlightme"><code>            z8n[i3+6] * gamma[i1][6] + z8n[i3+7] * gamma[i1][7];</code></span></td></tr>
-<tr><td class="code_line_class">815</td><td><code></code></td></tr>
-<tr><td class="code_line_class">816</td><td><span class="highlightme"><code>         hourgam[0][i1] = gamma[i1][0] -  volinv*(dvdx[i3  ] * hourmodx +</code></span></td></tr>
-<tr><td class="code_line_class">817</td><td><code>                                                  dvdy[i3  ] * hourmody +</code></td></tr>
-<tr><td class="code_line_class">818</td><td><code> ... </code></td></tr>
-<tr><td class="code_line_class">819</td><td><code></code></td></tr>
-<tr><td class="code_line_class">820</td><td><span class="highlightme"><code>         hourgam[1][i1] = gamma[i1][1] -  volinv*(dvdx[i3+1] * hourmodx +</code></span></td></tr>
-<tr><td class="code_line_class">821</td><td><code>                                                  dvdy[i3+1] * hourmody +</code></td></tr>
-<tr><td class="code_line_class">822</td><td><code> ... </code></td></tr>
-<tr><td class="code_line_class">823</td><td><code></code></td></tr>
-<tr><td class="code_line_class">824</td><td><span class="highlightme"><code>         hourgam[2][i1] = gamma[i1][2] -  volinv*(dvdx[i3+2] * hourmodx +</code></span></td></tr>
-<tr><td class="code_line_class">825</td><td><code>                                                  dvdy[i3+2] * hourmody +</code></td></tr>
-<tr><td class="code_line_class">826</td><td><code> ... </code></td></tr>
-<tr><td class="code_line_class">827</td><td><code></code></td></tr>
-<tr><td class="code_line_class">828</td><td><span class="highlightme"><code>         hourgam[3][i1] = gamma[i1][3] -  volinv*(dvdx[i3+3] * hourmodx +</code></span></td></tr>
-<tr><td class="code_line_class">829</td><td><code>                                                  dvdy[i3+3] * hourmody +</code></td></tr>
-<tr><td class="code_line_class">830</td><td><code> ... </code></td></tr>
-<tr><td class="code_line_class">831</td><td><code></code></td></tr>
-<tr><td class="code_line_class">832</td><td><span class="highlightme"><code>         hourgam[4][i1] = gamma[i1][4] -  volinv*(dvdx[i3+4] * hourmodx +</code></span></td></tr>
-<tr><td class="code_line_class">833</td><td><code>                                                  dvdy[i3+4] * hourmody +</code></td></tr>
-<tr><td class="code_line_class">834</td><td><code> ... </code></td></tr>
-<tr><td class="code_line_class">835</td><td><code></code></td></tr>
-<tr><td class="code_line_class">836</td><td><span class="highlightme"><code>         hourgam[5][i1] = gamma[i1][5] -  volinv*(dvdx[i3+5] * hourmodx +</code></span></td></tr>
-<tr><td class="code_line_class">837</td><td><code>                                                  dvdy[i3+5] * hourmody +</code></td></tr>
-<tr><td class="code_line_class">838</td><td><code> ... </code></td></tr>
-<tr><td class="code_line_class">839</td><td><code></code></td></tr>
-<tr><td class="code_line_class">840</td><td><span class="highlightme"><code>         hourgam[6][i1] = gamma[i1][6] -  volinv*(dvdx[i3+6] * hourmodx +</code></span></td></tr>
-<tr><td class="code_line_class">841</td><td><code>                                                  dvdy[i3+6] * hourmody +</code></td></tr>
-<tr><td class="code_line_class">842</td><td><code> ... </code></td></tr>
-<tr><td class="code_line_class">843</td><td><code></code></td></tr>
-<tr><td class="code_line_class">844</td><td><span class="highlightme"><code>         hourgam[7][i1] = gamma[i1][7] -  volinv*(dvdx[i3+7] * hourmodx +</code></span></td></tr>
-<tr><td class="code_line_class">845</td><td><code>                                                  dvdy[i3+7] * hourmody +</code></td></tr>
-<tr><td class="code_line_class">846</td><td><code> ... </code></td></tr>
-<tr><td class="code_line_class">1291</td><td><code> ... </code></td></tr>
-<tr><td class="code_line_class">1292</td><td><code></code></td></tr>
-<tr><td class="code_line_class">1293</td><td><span class="highlightme"><code>  Real_t dx70 = x7 - x0;</code></span></td></tr>
-<tr><td class="code_line_class">1294</td><td><code>  Real_t dy70 = y7 - y0;</code></td></tr>
-<tr><td class="code_line_class">1295</td><td><code> ... </code></td></tr>
-<tr><td class="code_line_class">1309</td><td><code> ... </code></td></tr>
-<tr><td class="code_line_class">1310</td><td><code>  Real_t dy64 = y6 - y4;</code></td></tr>
-<tr><td class="code_line_class">1311</td><td><span class="highlightme"><code>  Real_t dz64 = z6 - z4;</code></span></td></tr>
-<tr><td class="code_line_class">1312</td><td><code></code></td></tr>
-<tr><td class="code_line_class">1313</td><td><code> ... </code></td></tr>
-<tr><td class="code_line_class">1319</td><td><code> ... </code></td></tr>
-<tr><td class="code_line_class">1320</td><td><code></code></td></tr>
-<tr><td class="code_line_class">1321</td><td><span class="highlightme"><code>  Real_t dx43 = x4 - x3;</code></span></td></tr>
-<tr><td class="code_line_class">1322</td><td><code>  Real_t dy43 = y4 - y3;</code></td></tr>
-<tr><td class="code_line_class">1323</td><td><code> ... </code></td></tr>
-<tr><td class="code_line_class">1325</td><td><code> ... </code></td></tr>
-<tr><td class="code_line_class">1326</td><td><code>  Real_t dy57 = y5 - y7;</code></td></tr>
-<tr><td class="code_line_class">1327</td><td><span class="highlightme"><code>  Real_t dz57 = z5 - z7;</code></span></td></tr>
-<tr><td class="code_line_class">1328</td><td><code></code></td></tr>
-<tr><td class="code_line_class">1329</td><td><code> ... </code></td></tr>
 <tr><td class="code_line_class">1376</td><td><code> ... </code></td></tr>
 <tr><td class="code_line_class">1377</td><td><code>{</code></td></tr>
 <tr><td class="code_line_class">1378</td><td><span class="highlightme"><code>   Real_t fx = (x2 - x0) - (x3 - x1);</code></span></td></tr>
