--- a/open-source-reports/LULESH/fpc-report/cancellation/source_2.html
+++ b/open-source-reports/LULESH/fpc-report/cancellation/source_2.html
@@ -14,14 +14,14 @@
 <div class="separation_class"></div>
 <div class="report_title">
 <b>Report Title:</b>
-mpirun -np 8 --oversubscribe ./lulesh2.0 -p -i 10
+mpirun -np 8 --oversubscribe ./lulesh2.0 -i 10 -p
 </div>
 	
 <div class="separation_class"></div>
 <div class="hierarchy_class"><a href="../index.html">Main Report</a> &nbsp; &gt; &nbsp; 
 <a href="./cancellation.html">Cancellation
 	</a> &nbsp; &gt; &nbsp;
-/home/ignacio/projects/fpchecker/apps/cpu_testing/LULESH/lulesh-util.cc
+/usr/workspace/wsa/laguna/fpchecker/cpu_checking/apps/LULESH/lulesh-util.cc
 </div>
 <h2 id="heading">
 Cancellation
