--- a/open-source-reports/LULESH/fpc-report/index.html
+++ b/open-source-reports/LULESH/fpc-report/index.html
@@ -14,7 +14,7 @@
 <div class="separation_class"></div>
 <div class="report_title">
 <b>Report Title:</b>
-mpirun -np 8 --oversubscribe ./lulesh2.0 -p -i 10
+mpirun -np 8 --oversubscribe ./lulesh2.0 -i 10 -p
 </div>
 
 <div class="separation_class"></div>
@@ -54,7 +54,7 @@ mpirun -np 8 --oversubscribe ./lulesh2.0 -p -i 10
 		  <span class="tooltiptext">NaN (not a number) are the result of invalid operations, such as 0/0 or sqrt(-1).</span></div>
 	   </td>
        <td>
-<a href="./nan/nan.html">860</a>
+<a href="./nan/nan.html">430</a>
 	   </td>
 	   <td><img src="icons_3/high_icon.svg" alt="" width="50"/></td>
     </tr>
@@ -98,7 +98,7 @@ mpirun -np 8 --oversubscribe ./lulesh2.0 -p -i 10
 			  By default, this event is detected when at least ten decimal digits are lost due to a subtraction.</span></div>
 	  </td>
       <td>
-<a href="./cancellation/cancellation.html">478141486</a>
+<a href="./cancellation/cancellation.html">123068684</a>
 	  </td>
 	  <td><img src="icons_3/low_icon.svg" alt="" width="45"/></td>
     </tr>
@@ -146,7 +146,7 @@ mpirun -np 8 --oversubscribe ./lulesh2.0 -p -i 10
     <tr>
       <td class="td_class">Code paths:</td>
       <td class="td_class">
-/home/ignacio/projects/fpchecker/apps/cpu_testing/LULESH
+/usr/workspace/wsa/laguna/fpchecker/cpu_checking/apps/LULESH
 	  </td>
     </tr>
     <tr>
@@ -158,7 +158,7 @@ mpirun -np 8 --oversubscribe ./lulesh2.0 -p -i 10
     <tr>
       <td class="td_class">Lines affected:</td>
       <td class="td_class">
-68
+45
 	  </td>
     </tr>
   </tbody>
