--- a/open-source-reports/LULESH/fpc-report/cancellation/cancellation.html
+++ b/open-source-reports/LULESH/fpc-report/cancellation/cancellation.html
@@ -3,7 +3,9 @@
 <head>
 <meta charset="UTF-8">
 <title>FPChecker Report</title>
+<link href="./sitestyle.css" rel="stylesheet" type="text/css">
 <link href="../sitestyle.css" rel="stylesheet" type="text/css">	
+
 	
 </head>
 <body class="body_class">
@@ -14,7 +16,7 @@
 <div class="separation_class"></div>
 <div class="report_title">
 <b>Report Title:</b>
-mpirun -np 8 --oversubscribe ./lulesh2.0 -p -i 10
+mpirun -np 8 --oversubscribe ./lulesh2.0 -i 10 -p
 </div>
 
 <div class="separation_class"></div>
@@ -24,15 +26,15 @@ Cancellation	</a> </div>
 <h2 id="heading">
 Cancellation Report</h2>
 	
-<table width="500" border="1" class="report_box_files">
+<table width="700" border="1" class="report_box_files">
   <tbody>
     <tr>
       <th scope="col" class="files_class">File</th>
       <th scope="col" class="files_class">Lines</th>
     </tr>
-<tr><td class="files_class">/home/ignacio/projects/fpchecker/apps/cpu_testing/LULESH/lulesh.cc</td>
-<td class="files_class"><a href="./source_1.html">66</a></td></tr><tr><td class="files_class">/home/ignacio/projects/fpchecker/apps/cpu_testing/LULESH/lulesh-util.cc</td>
-<td class="files_class"><a href="./source_2.html">1</a></td></tr>  <!--
+<tr><td class="files_class">/usr/workspace/wsa/laguna/fpchecker/cpu_checking/apps/LULESH/lulesh.cc</td>
+<td class="files_class"><a href="./source_1.html">43</a></td></tr><tr><td class="files_class">/usr/workspace/wsa/laguna/fpchecker/cpu_checking/apps/LULESH/lulesh-util.cc</td>
+<td class="files_class"><a href="./source_2.html">1</a></td></tr>  	<!--
     <tr>
       <td class="files_class">/path/to/file/that/had/events/main.cpp</td>
       <td class="files_class"><a href="./source_1.html">22</a></td>
@@ -45,7 +47,28 @@ Cancellation Report</h2>
       <td class="files_class">/path/to/file/that/had/events/other/path/long/init.c</td>
       <td class="files_class">1</td>
     </tr>
-  -->
+  	-->
+  </tbody>
+</table>
+
+<h3 id="heading"> Inputs </h3>
+	
+<table width="700" border="1" class="report_box_files">
+  <tbody>
+<tr>
+<td class="files_class">./lulesh2.0 -i 10 -p </td>
+</tr>
+	<!--  
+    <tr>
+      <td class="files_class">/path/to/file/that/had/events/prog -o input1 -o input2 -o input3 -o input4 -o input5</td>
+    </tr>
+	<tr>
+      <td class="files_class">/path/to/file/that/had/events/prog -o input1 -o input2 -o input3 -o input4 -o input5</td>
+    </tr>
+	<tr>
+      <td class="files_class">/path/to/file/that/had/events/prog -o input1 -o input2 -o input3 -o input4 -o input5</td>
+    </tr>
+  	-->
   </tbody>
 </table>
 	
