added report usage doc

--- a/open-source-reports/exponent_usage/LULESH/fpc-report/index.html
+++ b/open-source-reports/exponent_usage/LULESH/fpc-report/index.html
@@ -14,7 +14,7 @@
 <div class="separation_class"></div>
 <div class="report_title">
 <b>Report Title:</b>
-mpirun -n1 ./lulesh2.0 -s 10 -p -i 10
+mpirun -n 1 ./lulesh2.0 -s 10 -p -i 10
 </div>
 
 <div class="separation_class"></div>
@@ -26,7 +26,7 @@ mpirun -n1 ./lulesh2.0 -s 10 -p -i 10
   <tbody>
 	<tr class="tr_class"> 
 		<td class="td_class">
-<img src="./program/lulesh2.0_-s_10_-p_-i_10_.png" height="300" alt=""/>		</td>
+<a href="./program/lulesh2.0_-s_10_-p_-i_10_.png"><img src="./program/lulesh2.0_-s_10_-p_-i_10_.png" height="400" alt=""/></a>		</td>
 	</tr>
   </tbody>
 </table>
@@ -38,12 +38,12 @@ mpirun -n1 ./lulesh2.0 -s 10 -p -i 10
 <table width="150" border="0" class="report_box">
 <tbody>
 <tr class="tr_class"> <td class="td_class"> File: lulesh.cc </td></tr>
-<tr class="tr_class"> <td class="td_class"> <img src="./files/lulesh.cc.png" height="300" alt=""/></td></tr>
+<tr class="tr_class"> <td class="td_class"> <a href="./files/lulesh.cc.png"><img src="./files/lulesh.cc.png" height="300" alt=""/></a></td></tr>
 <tr class="tr_class"> <td class="td_class"> File: lulesh-init.cc </td></tr>
-<tr class="tr_class"> <td class="td_class"> <img src="./files/lulesh-init.cc.png" height="300" alt=""/></td></tr>
+<tr class="tr_class"> <td class="td_class"> <a href="./files/lulesh-init.cc.png"><img src="./files/lulesh-init.cc.png" height="300" alt=""/></a></td></tr>
 <tr class="tr_class"> <td class="td_class"> File: lulesh-util.cc </td></tr>
-<tr class="tr_class"> <td class="td_class"> <img src="./files/lulesh-util.cc.png" height="300" alt=""/></td></tr>
-<!-- <tr class="tr_class"> <td class="td_class"> <img src="sample_plot.png" height="300" alt=""/></td> </tr> -->
+<tr class="tr_class"> <td class="td_class"> <a href="./files/lulesh-util.cc.png"><img src="./files/lulesh-util.cc.png" height="300" alt=""/></a></td></tr>
+<!-- <tr class="tr_class"> <td class="td_class"> <a href="sample_plot.png"><img src="sample_plot.png" height="300" alt=""/></a></td> </tr> -->
 </tbody>
 </table>
 	
